--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import "../styles/global.css"
+let pageTitle  = Astro.props.pageTitle || "zketch"
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,7 +10,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
 		<slot />
