--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '@/layouts/Layout.astro';
+import VaultPage from '@/page-components/vault-page';
 ---
 
 <Layout>
-	<h1>Home</h1>
+	<VaultPage client:only="react" />
 </Layout>
+  
+ 
