--- a/src/pages/vault.astro
+++ b/src/pages/vault.astro
@@ -1,8 +1,10 @@
 ---
+import { Toaster } from "@/components/ui/sonner";
 import Layout from "@/layouts/Layout.astro";
 import VaultPage from "@/page-components/vault-page";
 ---
 
 <Layout>
-	<VaultPage client:only="react" />
-</Layout>
+ 		<VaultPage client:only="react" />
+		<Toaster richColors client:only="react" />
+ </Layout>
