--- a/src/pages/draw/[id].astro
+++ b/src/pages/draw/[id].astro
@@ -1,4 +1,5 @@
 ---
+import { Toaster } from "@/components/ui/sonner";
 import Layout from "@/layouts/Layout.astro";
 import DrawByIdPage from "@/page-components/draw-pages.tsx/draw-by-id";
 
@@ -13,4 +14,5 @@ export const prerender = false;
 
 <Layout>
 	<DrawByIdPage client:only="react" />
+	<Toaster richColors client:only="react" /> 
 </Layout>
