new engine setup and tweakin render logics

--- a/src/pages/draw/[id].astro
+++ b/src/pages/draw/[id].astro
@@ -1,7 +1,7 @@
 ---
 import { Toaster } from "@/components/ui/sonner";
 import Layout from "@/layouts/Layout.astro";
-import DrawByIdPage from "@/page-components/draw-pages.tsx/draw-by-id";
+import DrawByIdPage from "@/page-components/draw-pages/draw-by-id";
 
 export const prerender = false;
 
