--- a/src/pages/draw/index.astro
+++ b/src/pages/draw/index.astro
@@ -1,7 +1,7 @@
 ---
 import { Toaster } from "@/components/ui/sonner";
 import Layout from "@/layouts/Layout.astro";
-import DrawPage from "@/page-components/draw-pages.tsx/draw-page";
+import DrawPage from "@/page-components/draw-pages/draw-page";
 ---
 
 <Layout>
